feat: added new storage events and event that is published on queue